hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: sysintelligent/hello-app:1.0.0
          imagePullPolicy: Always  # Set imagePullPolicy to Always
          ports:
            - containerPort: 8080
