hello-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-1
  labels:
    app: hello
spec:
  containers:
    - name: hello-node
      image: sysintelligent/hello-node
      ports:
        - name: hello-port
          containerPort: 3000
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-2
  labels:
    app: hello
spec:
  containers:
    - name: hello-node
      image: sysintelligent/hello-node
      ports:
        - name: hello-port
          containerPort: 3000
