hello.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-1
  labels:
    app: hello
spec:
  containers:
    - name: node-hello
      image: sysintelligent/node-hello
      ports:
        - name: hello-port
          containerPort: 3000
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod-2
  labels:
    app: hello
spec:
  containers:
    - name: node-hello
      image: sysintelligent/node-hello
      ports:
        - name: hello-port
          containerPort: 3000
