hello-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app-v1
  template:
    metadata:
      labels:
        app: hello-app-v1
    spec:
      containers:
        - name: hello-app
          image: sysintelligent/hello-app:1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app-v2
  template:
    metadata:
      labels:
        app: hello-app-v2
    spec:
      containers:
        - name: hello-app
          image: sysintelligent/hello-app:2.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1
spec:
  type: NodePort
  selector:
    app: hello-app-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2
spec:
  type: NodePort
  selector:
    app: hello-app-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
