hello-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-loadbalancer
  labels:
    app: hello
spec:
  ports:
    - port: 80
      nodePort: 30080
      targetPort: hello-port
      protocol: TCP
  selector:
    app: hello
  type: LoadBalancer
