hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: hello-app-v1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: hello-app-v2
                port:
                  number: 80
